--- a/ui/package.json
+++ b/ui/package.json
@@ -14,6 +14,8 @@
     "daisyui": "^5.0.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-helmet": "^6.1.0",
+    "react-router-dom": "^7.3.0",
     "tailwindcss": "^4.0.13"
   },
   "devDependencies": {
