--- a/ui/package.json
+++ b/ui/package.json
@@ -15,6 +15,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-helmet": "^6.1.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.3.0",
     "tailwindcss": "^4.0.13"
   },
