--- a/ui/package.json
+++ b/ui/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.13",
+    "axios": "^1.8.4",
     "daisyui": "^5.0.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
